add sugar database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,25 +5,50 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <dependency>
+        <groupId>
+com.squareup.picasso
+        </groupId>
+
+        <artifactId>
+picasso
+        </artifactId>
+
+        <version>
+2.5.2
+        </version>
+    </dependency>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name=".Inicio_Activity" >
+            <meta-data
+                android:name="DATABASE"
+                android:value="recomendacion.db" />
+            <meta-data
+                android:name="VERSION"
+                android:value="2" />
+            <meta-data
+                android:name="QUERY_LOG"
+                android:value="true" />
+            <meta-data
+                android:name="DOMAIN_PACKAGE_NAME"
+                android:value="com.example.francisco.recomendador" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:theme="@style/NoAppBar"
+            android:name=".MainActivity" >
+        </activity>
     </application>
-
-    <dependency>
-        <groupId>com.squareup.picasso</groupId>
-        <artifactId>picasso</artifactId>
-        <version>2.5.2</version>
-    </dependency>
 
 </manifest>
