--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@ picasso
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Inicio_Activity" >
+        <activity android:name=".BuscarPeliculaActivity" >
             <meta-data
                 android:name="DATABASE"
                 android:value="recomendacion.db" />
@@ -46,8 +46,10 @@ picasso
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/NoAppBar"
-            android:name=".MainActivity" >
+            android:name=".MainActivity"
+            android:theme="@style/NoAppBar" >
+        </activity>
+        <activity android:name=".Inicio_Activity" >
         </activity>
     </application>
 
