--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@ picasso
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".BuscarPeliculaActivity" >
+        <activity android:name=".Inicio_Activity" >
             <meta-data
                 android:name="DATABASE"
                 android:value="recomendacion.db" />
@@ -49,7 +49,16 @@ picasso
             android:name=".MainActivity"
             android:theme="@style/NoAppBar" >
         </activity>
-        <activity android:name=".Inicio_Activity" >
+        <activity android:name=".BuscarPeliculaActivity" >
+        </activity>
+        <activity android:name=".Pelicula_Activity" >
+        </activity>
+        <activity android:name=".PeliculasGustadasActivity" >
+        </activity>
+        <activity
+            android:name=".UsuariosSimilaresActivity"
+            android:label="@string/title_activity_usuarios_similares"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
