--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@ picasso
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dead"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -45,23 +45,15 @@ picasso
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BuscarPeliculaActivity" >
+        <activity android:name=".BuscarPeliculaActivity" android:label="Buscar Peliculas">
         </activity>
         <activity android:name=".Pelicula_Activity" >
         </activity>
-        <activity android:name=".PeliculasGustadasActivity" >
+        <activity android:name=".PeliculasGustadasActivity" android:label="Peliculas Gustadas">
         </activity>
-        <activity
-            android:name=".UsuariosSimilaresActivity"
-            android:label="@string/title_activity_usuarios_similares"
-            android:theme="@style/AppTheme.NoActionBar" >
+        <activity android:name=".UsuariosSimilaresActivity" android:label="Usuarios Similares">
         </activity>
-        <activity android:name=".NuestraRecomendacion" >
-        </activity>
-        <activity
-            android:name=".Pelicula_Calificar"
-            android:label="@string/title_activity_pelicula__calificar"
-            android:theme="@style/AppTheme.NoActionBar" >
+        <activity android:name=".NuestraRecomendacion" android:label="Nuestra Recomendacion">
         </activity>
         <activity android:name=".Pelicula_Calificar_Activity" >
         </activity>
